--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,11 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand navbar-logo" href="/" src="assets/img/logo.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
+    <div class="collapse navbar-collapse text-center" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto text-center">
         <li class="nav-item">
           <a class="nav-link" href="/historical.html">HISTORICKÝ VÝVOJ CEN</a>
         </li>
