--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,15 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="nav-link nav-link-icon fa fa-home" href="/"></a>
+    <a class="nav-link nav-item nav-link-icon fa fa-home" style="padding-right: 1rem"href="/"></a>
+    <a class="nav-item" href="/historical.html">HISTORICKÝ VÝVOJ CEN</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse text-center" id="navbarResponsive">
       <ul class="navbar-nav ml-auto text-center">
         <li class="nav-item">
-          <a class="nav-link" href="/historical.html">HISTORICKÝ VÝVOJ CEN</a>
+          <a class="nav-link" href="/btc.html">BTC</a>
         </li>
-          <a class="nav-link" href="/">AKTUÁLNÍ CENY</a>
+          <a class="nav-link" href="/eth.html">ETH</a>
+        </li>
+          <a class="nav-link" href="/ltc.html">LTC</a>
+        </li>
+          <a class="nav-link" href="/xmr.html">XMR</a>
         </li>
       </ul>
     </div>
